1999-08-31  Federico Mena Quintero  <federico@redhat.com>

	* gnome-metadata.c: Arrange order of #ifdef tests for db.

	* gnome-dump.c: Likewise.

1999-08-30  Federico Mena Quintero  <federico@redhat.com>

	* gnome-triggers.h: Make it build.

1999-08-29  Tom Tromey  <tromey@cygnus.com>

	* gnome-mime.c (mime_mutex): New global.
	(gnome_mime_type_or_default): Lock mutex.
	(gnome_mime_type_of_file): Removed redundant call to
	gnome_mime_type_from_magic.

1999-08-28  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (metadata_list_nolock): New function.
	(gnome_metadata_list): Use it.
	(worker): Use it.
	(init): Don't re-check `database'.

	* gnome-metadata.c (database_mu): Now an ordinary static mutex.
	(TLOCK): Removed.
	(TUNLOCK): Likewise.
	(lock): Removed `thread' argument.
	(unlock): Likewise.
	(Various): All mutex locking now done around body of exported
	functions.

Sat Aug 28 10:33:28 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c: fix warnings

1999-08-28  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-metadata.c: Temporarily #define `TUNLOCK()' and `TLOCK()'
	to no-ops even if gthreads are available, to let gnome-libs
	compile with GLib 1.2 again.

1999-08-27  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (database_mu): New global.
	(init): Lock and unlock mutex.
	(lock): Likewise.  Added `thread' argument.  Updated all callers.
	(unlock): Likewise.
	(TLOCK): New macro.
	(TUNLOCK): Likewise.
	(try_app_regexs): Likewise.
	(app_get_by_type): Likewise.
	(try_regexs): Likewise.  Also, increment `p' inside the loop.
	(run_file): Enable code.

Fri Aug 27 15:40:57 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.[ch]: add functions for getting the i18n lists,
	  and implement it using g_dataset instead of hash_table

	* gnome-dentry.c: don't just concatenate the argument list when
	  launching with argument list, but add quotes around each
	  argument, and escape quotes inside arguments, and then
	  concatenate with spaces
